--- a/css/styles.css
+++ b/css/styles.css
@@ -62,4 +62,114 @@ main {
     background-color: #f4f4f4;
     padding: 20px 28px;
     margin: auto;
+    display: flex;
+    margin: auto;
+}
+
+.right-main {
+    display: flex;
+    flex-direction: column;
+    align-items: center; 
+    height: 100%; 
+    margin: 0 auto
+}
+
+.right-main > H2 {
+    align-self: flex-start; 
+    display: flex;
+    color: #FC200C;
+    font-family: Roboto;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    align-self: flex-start;
+    text-align: center;
+}
+
+.top5 {
+    display: flex;
+    }
+
+.top5 section {
+    position: relative;
+    right: 40px;
+    top: 50px;
+}
+
+article section h3 {
+    position: top;
+    color: #222;
+    font-family: Roboto;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    text-align: center;
+}  
+
+.top5 section ol {
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    top: 20px;
+    left: 24px;
+    width: 100%;
+    height: 100%;
+    margin: 0 auto;
+    padding: 0;
+    list-style: lower;
+}
+
+.top5 section ol li {
+    color: #222;
+font-family: Roboto;
+font-size: 16px;
+font-style: normal;
+font-weight: 700;
+line-height: normal;
+}
+
+.top5 img{
+    position: relative;
+    top: 50px;
+    left: 60px;
+    width: 100%;
+    height: 100%;
+    margin: 0 auto;
+    padding: 0;
+}
+
+footer {
+    display: flex;
+    justify-content: space-between;
+    height: 20vh;
+    padding: 0 28px;
+}
+
+.nav-grasoso{
+    position: relative;
+    top: 16px;
+}
+
+.nav-grasoso ul {
+    color: #F3F3F3;
+font-family: Roboto;
+font-size: 16px;
+font-style: normal;
+font-weight: 400;
+line-height: normal;
+text-align: center;
+display: flex;
+flex-direction: column;
+justify-content: flex-end;
+gap: 16px;
+}
+
+.grasa {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    right: 20px;
 }
